# libnk2

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  README.mingw  README.static  README_mingw  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libnk2-wiki.ini  libnk2.ini  libnk2.pc.in  libnk2.spec.in  setup.cfg.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh  tox.ini
.github/workflows/: build_ossfuzz.yml
.travis/: runtests.sh  script.sh
common/: config_windows.h  endian.h
documentation/: Nickfile (NK2) format.asciidoc
dpkg/: changelog.in  control  copyright  copyright.in  rules
examples/: Makefile.am
examples/libnk2/: open_close.c
include/: Makefile.am  libnk2.h.in
include/libnk2/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  mapi.h  types.h.in
libnk2/: Makefile.am  libnk2.c  libnk2.rc.in  libnk2_array_type.c  libnk2_array_type.h  libnk2_codepage.h  libnk2_debug.c  libnk2_debug.h  libnk2_definitions.h  libnk2_definitions.h.in  libnk2_error.c  libnk2_error.h  libnk2_extern.h  libnk2_file.c  libnk2_file.h  libnk2_file_footer.c  libnk2_file_footer.h  libnk2_file_header.c  libnk2_file_header.h  libnk2_guid.c  libnk2_guid.h  libnk2_io_handle.c  libnk2_io_handle.h  libnk2_item.c  libnk2_item.h  libnk2_item_values.c  libnk2_item_values.h  libnk2_legacy.c  libnk2_legacy.h  libnk2_libbfio.h  libnk2_libcdata.h  libnk2_libcerror.h  libnk2_libclocale.h  libnk2_libcnotify.h  libnk2_libcstring.h  libnk2_libfdatetime.h  libnk2_libfmapi.h  libnk2_libfvalue.h  libnk2_libuna.h  libnk2_list_type.c  (+21 more)
m4/: libfguid.m4  libfmapi.m4  libfwnt.m4
macosx/: Makefile.am  Readme.rtf
macosx/libnk2.pmdoc/: 01bin.xml  01bin.xml.in  02include.xml  02include.xml.in  03lib.xml  03lib.xml.in  04share.xml  04share.xml.in  index.xml  index.xml.in
manuals/: Makefile.am  libnk2.3  nk2export.1  nk2info.1  nk2recover.1
msvscpp/: Makefile.am  libnk2.sln
msvscpp/libfmapi/: libfmapi.vcproj
msvscpp/libfvalue/: libfvalue.vcproj
msvscpp/libnk2/: libnk2.vcproj
msvscpp/libnk2_dll/: libnk2_dll.vcproj
msvscpp/nk2_test_error/: nk2_test_error.vcproj
msvscpp/nk2_test_file/: nk2_test_file.vcproj
msvscpp/nk2_test_file_footer/: nk2_test_file_footer.vcproj
msvscpp/nk2_test_file_header/: nk2_test_file_header.vcproj
msvscpp/nk2_test_get_version/: nk2_test_get_version.vcproj
msvscpp/nk2_test_io_handle/: nk2_test_io_handle.vcproj
msvscpp/nk2_test_item/: nk2_test_item.vcproj
msvscpp/nk2_test_mapi_value/: nk2_test_mapi_value.vcproj
msvscpp/nk2_test_notify/: nk2_test_notify.vcproj
msvscpp/nk2_test_open_close/: nk2_test_open_close.vcproj
msvscpp/nk2_test_record_entry/: nk2_test_record_entry.vcproj
msvscpp/nk2_test_set_ascii_codepage/: nk2_test_set_ascii_codepage.vcproj
msvscpp/nk2_test_support/: nk2_test_support.vcproj
msvscpp/nk2_test_tools_info_handle/: nk2_test_tools_info_handle.vcproj
msvscpp/nk2_test_tools_output/: nk2_test_tools_output.vcproj
msvscpp/nk2_test_tools_signal/: nk2_test_tools_signal.vcproj
msvscpp/nk2_test_value_identifier/: nk2_test_value_identifier.vcproj
msvscpp/nk2export/: nk2export.vcproj
msvscpp/nk2info/: nk2info.vcproj
msvscpp/pynk2/: pynk2.vcproj
nk2tools/: Makefile.am  directory_io.h  export_handle.c  export_handle.h  filetime.c  filetime.h  guid.c  guid.h  info_handle.c  info_handle.h  item_file.c  item_file.h  log_handle.c  log_handle.h  nk2common.c  nk2common.h  nk2export.c  nk2getopt.c  nk2getopt.h  nk2info.c  nk2input.c  nk2input.h  nk2output.c  nk2output.h  nk2signal.c  nk2signal.h  nk2tools_getopt.c  nk2tools_getopt.h  nk2tools_i18n.h  nk2tools_libbfio.h  nk2tools_libcerror.h  nk2tools_libcfile.h  nk2tools_libclocale.h  nk2tools_libcnotify.h  nk2tools_libcpath.h  nk2tools_libcstring.h  nk2tools_libcsystem.h  nk2tools_libfdatetime.h  nk2tools_libfguid.h  nk2tools_libfmapi.h  (+10 more)
ossfuzz/: Makefile.am  file_fuzzer.cc  ossfuzz_libnk2.h
pynk2/: Makefile.am  pynk2.c  pynk2.h  pynk2_codepage.c  pynk2_codepage.h  pynk2_datetime.c  pynk2_datetime.h  pynk2_error.c  pynk2_error.h  pynk2_file.c  pynk2_file.h  pynk2_file_object_io_handle.c  pynk2_file_object_io_handle.h  pynk2_guid.c  pynk2_guid.h  pynk2_integer.c  pynk2_integer.h  pynk2_item.c  pynk2_item.h  pynk2_items.c  pynk2_items.h  pynk2_libbfio.h  pynk2_libcerror.h  pynk2_libclocale.h  pynk2_libcstring.h  pynk2_libfguid.h  pynk2_libnk2.h  pynk2_python.h  pynk2_record_entries.c  pynk2_record_entries.h  pynk2_record_entry.c  pynk2_record_entry.h  pynk2_unused.h  setup.py.in
pynk2-python2/: Makefile.am
pynk2-python3/: Makefile.am
tests/: Makefile.am  nk2_test_error.c  nk2_test_file.c  nk2_test_file_footer.c  nk2_test_file_header.c  nk2_test_functions.c  nk2_test_functions.h  nk2_test_get_version.c  nk2_test_getopt.c  nk2_test_getopt.h  nk2_test_io_handle.c  nk2_test_item.c  nk2_test_libbfio.h  nk2_test_libcerror.h  nk2_test_libclocale.h  nk2_test_libcnotify.h  nk2_test_libcstring.h  nk2_test_libcsystem.h  nk2_test_libnk2.h  nk2_test_libuna.h  nk2_test_macros.h  nk2_test_mapi_value.c  nk2_test_memory.c  nk2_test_memory.h  nk2_test_notify.c  nk2_test_open_close.c  nk2_test_record_entry.c  nk2_test_set_ascii_codepage.c  nk2_test_support.c  nk2_test_tools_info_handle.c  nk2_test_tools_output.c  nk2_test_tools_signal.c  nk2_test_unused.h  nk2_test_value_identifier.c  pkgbuild.sh  pynk2_test_file.py  pynk2_test_get_version.py  pynk2_test_open_close.py  pynk2_test_set_ascii_codepage.py  pynk2_test_support.py  (+15 more)
tests/data/: file_footer.1  file_header.1  record_entry.32bit_integer.1  record_entry.boolean.1  record_entry.string_unicode.1
