EXTRA_DIST = \
	libnk2.pmdoc/01bin.xml.in \
	libnk2.pmdoc/01bin-contents.xml \
	libnk2.pmdoc/02include.xml.in \
	libnk2.pmdoc/02include-contents.xml \
	libnk2.pmdoc/03lib.xml.in \
	libnk2.pmdoc/03lib-contents.xml \
	libnk2.pmdoc/04share.xml.in \
	libnk2.pmdoc/04share-contents.xml \
	libnk2.pmdoc/index.xml \
	libnk2.pmdoc/index.xml.in \
	Introduction.rtf \
	Introduction.rtf.in \
	License.rtf \
	Readme.rtf

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f libnk2.pmdoc/01bin.xml
	/bin/rm -f libnk2.pmdoc/02include.xml
	/bin/rm -f libnk2.pmdoc/03lib.xml
	/bin/rm -f libnk2.pmdoc/04share.xml
	/bin/rm -f libnk2.pmdoc/index.xml
	/bin/rm -f Introduction.rtf
	/bin/rm -f Makefile

