MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfmapi/libfmapi.vcproj \
	libfvalue/libfvalue.vcproj \
	libfwnt/libfwnt.vcproj \
	libnk2/libnk2.vcproj \
	libuna/libuna.vcproj \
	nk2_test_error/nk2_test_error.vcproj \
	nk2_test_file/nk2_test_file.vcproj \
	nk2_test_file_footer/nk2_test_file_footer.vcproj \
	nk2_test_file_header/nk2_test_file_header.vcproj \
	nk2_test_io_handle/nk2_test_io_handle.vcproj \
	nk2_test_item/nk2_test_item.vcproj \
	nk2_test_mapi_value/nk2_test_mapi_value.vcproj \
	nk2_test_notify/nk2_test_notify.vcproj \
	nk2_test_record_entry/nk2_test_record_entry.vcproj \
	nk2_test_support/nk2_test_support.vcproj \
	nk2_test_tools_info_handle/nk2_test_tools_info_handle.vcproj \
	nk2_test_tools_output/nk2_test_tools_output.vcproj \
	nk2_test_tools_signal/nk2_test_tools_signal.vcproj \
	nk2export/nk2export.vcproj \
	nk2info/nk2info.vcproj \
	libnk2.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

